--- a/app/src/main/res/layout/fragment_page_one.xml
+++ b/app/src/main/res/layout/fragment_page_one.xml
@@ -18,7 +18,7 @@
             android:background="@drawable/ripple_effect_noround"
 
             android:gravity="center_vertical"
-            android:paddingStart="20dp"
+            android:paddingStart="0dp"
             android:paddingEnd="20dp"
             android:paddingBottom="0dp"
             android:weightSum="5">
@@ -27,7 +27,7 @@
             <ImageView
                 android:id="@+id/imageView_book1"
                 android:layout_width="wrap_content"
-                android:layout_height="140dp"
+                android:layout_height="120dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:scaleType="fitCenter"
@@ -36,10 +36,10 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginEnd="0dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="5dp"
                 android:layout_weight="4.5"
                 android:orientation="vertical">
 
@@ -54,7 +54,8 @@
                     android:gravity="center|start"
                     android:text="TOP1"
                     android:textColor="#000000"
-                    android:textSize="26sp" />
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/rank_title1"
@@ -69,7 +70,7 @@
                     android:maxLines="1"
                     android:text="도서명: 플라톤의 국가"
                     android:textColor="#000000"
-                    android:textSize="18sp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/rank_rate1"
@@ -81,7 +82,7 @@
                     android:gravity="start|center_vertical"
                     android:text="통과율: 78%"
                     android:textColor="#000000"
-                    android:textSize="26sp" />
+                    android:textSize="24sp" />
             </LinearLayout>
         </LinearLayout>
 
@@ -99,7 +100,7 @@
             android:background="@drawable/ripple_effect_noround"
 
             android:gravity="center_vertical"
-            android:paddingStart="20dp"
+            android:paddingStart="0dp"
             android:paddingEnd="20dp"
             android:paddingBottom="0dp"
             android:weightSum="5">
@@ -108,7 +109,7 @@
             <ImageView
                 android:id="@+id/imageView_book2"
                 android:layout_width="wrap_content"
-                android:layout_height="140dp"
+                android:layout_height="120dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:scaleType="fitCenter"
@@ -117,10 +118,10 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginEnd="0dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="5dp"
                 android:layout_weight="4.5"
                 android:orientation="vertical">
 
@@ -135,7 +136,8 @@
                     android:gravity="center|start"
                     android:text="TOP2"
                     android:textColor="#000000"
-                    android:textSize="26sp" />
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/rank_title2"
@@ -150,7 +152,7 @@
                     android:maxLines="1"
                     android:text="도서명: 정치학"
                     android:textColor="#000000"
-                    android:textSize="18sp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/rank_rate2"
@@ -162,7 +164,7 @@
                     android:gravity="start|center_vertical"
                     android:text="통과율: 72%"
                     android:textColor="#000000"
-                    android:textSize="26sp" />
+                    android:textSize="24sp" />
             </LinearLayout>
         </LinearLayout>
 
@@ -180,7 +182,7 @@
             android:background="@drawable/ripple_effect_noround"
 
             android:gravity="center_vertical"
-            android:paddingStart="20dp"
+            android:paddingStart="0dp"
             android:paddingEnd="20dp"
             android:paddingBottom="0dp"
             android:weightSum="5">
@@ -189,7 +191,7 @@
             <ImageView
                 android:id="@+id/imageView_book3"
                 android:layout_width="wrap_content"
-                android:layout_height="140dp"
+                android:layout_height="120dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:scaleType="fitCenter"
@@ -198,10 +200,10 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginEnd="0dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="5dp"
                 android:layout_weight="4.5"
                 android:orientation="vertical">
 
@@ -216,7 +218,8 @@
                     android:gravity="center|start"
                     android:text="TOP3"
                     android:textColor="#000000"
-                    android:textSize="26sp" />
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/rank_title3"
@@ -231,7 +234,7 @@
                     android:maxLines="1"
                     android:text="도서명: 키케로의 의무론"
                     android:textColor="#000000"
-                    android:textSize="18sp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/rank_rate3"
@@ -243,7 +246,7 @@
                     android:gravity="start|center_vertical"
                     android:text="통과율: 65%"
                     android:textColor="#000000"
-                    android:textSize="26sp" />
+                    android:textSize="24sp" />
             </LinearLayout>
         </LinearLayout>
 
@@ -261,7 +264,7 @@
             android:background="@drawable/ripple_effect_noround"
 
             android:gravity="center_vertical"
-            android:paddingStart="20dp"
+            android:paddingStart="0dp"
             android:paddingEnd="20dp"
             android:paddingBottom="0dp"
             android:weightSum="5">
@@ -270,7 +273,7 @@
             <ImageView
                 android:id="@+id/imageView_book4"
                 android:layout_width="wrap_content"
-                android:layout_height="140dp"
+                android:layout_height="120dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:scaleType="fitCenter"
@@ -279,10 +282,10 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginEnd="0dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="5dp"
                 android:layout_weight="4.5"
                 android:orientation="vertical">
 
@@ -297,7 +300,8 @@
                     android:gravity="center|start"
                     android:text="TOP4"
                     android:textColor="#000000"
-                    android:textSize="26sp" />
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/rank_title4"
@@ -312,7 +316,7 @@
                     android:maxLines="1"
                     android:text="도서명: 게르마니아"
                     android:textColor="#000000"
-                    android:textSize="18sp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/rank_rate4"
@@ -324,7 +328,7 @@
                     android:gravity="start|center_vertical"
                     android:text="통과율: 58%"
                     android:textColor="#000000"
-                    android:textSize="26sp" />
+                    android:textSize="24sp" />
             </LinearLayout>
         </LinearLayout>
 
@@ -342,7 +346,7 @@
             android:background="@drawable/ripple_effect_noround"
 
             android:gravity="center_vertical"
-            android:paddingStart="20dp"
+            android:paddingStart="0dp"
             android:paddingEnd="20dp"
             android:paddingBottom="0dp"
             android:weightSum="5">
@@ -351,7 +355,7 @@
             <ImageView
                 android:id="@+id/imageView_book5"
                 android:layout_width="wrap_content"
-                android:layout_height="140dp"
+                android:layout_height="120dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:scaleType="fitCenter"
@@ -360,10 +364,10 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginEnd="0dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="5dp"
                 android:layout_weight="4.5"
                 android:orientation="vertical">
 
@@ -378,7 +382,8 @@
                     android:gravity="center|start"
                     android:text="TOP5"
                     android:textColor="#000000"
-                    android:textSize="26sp" />
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/rank_title5"
@@ -393,7 +398,7 @@
                     android:maxLines="1"
                     android:text="도서명: 성어거스틴의 고백록"
                     android:textColor="#000000"
-                    android:textSize="18sp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/rank_rate5"
@@ -405,7 +410,7 @@
                     android:gravity="start|center_vertical"
                     android:text="통과율: 55%"
                     android:textColor="#000000"
-                    android:textSize="26sp" />
+                    android:textSize="24sp" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
