--- a/app/src/main/res/layout/fragment_rank.xml
+++ b/app/src/main/res/layout/fragment_rank.xml
@@ -11,26 +11,37 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.3"
         android:background="#ffffff"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:weightSum="3">
+
+        <TextView
+            android:id="@+id/textView25"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
         <TextView
             android:id="@+id/text_menu_library_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="2"
+            android:gravity="bottom"
             android:paddingStart="30dp"
             android:paddingEnd="0dp"
             android:text="@string/rank_det"
             android:textColor="#000000"
             android:textSize="36sp" />
+
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView6"
+    <View
+        android:id="@+id/view8"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.1"
-        android:visibility="invisible" />
+        android:layout_height="1dp"
+        android:layout_centerInParent="true"
+        android:background="#BBBBBB" />
 
     <LinearLayout
         android:layout_width="match_parent"
